[gd_scene format=3 uid="uid://dehyrd1ffjjff"]

[ext_resource type="Script" uid="uid://b7lb2mxxqf1uj" path="res://ui/popup_menus/save_confirm.gd" id="1_8d1wx"]
[ext_resource type="Texture2D" uid="uid://c5yfuettbwecl" path="res://ui/assets/x_icon.tres" id="2_fbx6x"]
[ext_resource type="Theme" uid="uid://cavvrgn7xx6ho" path="res://ui/assets/theme/default/grey_theme.tres" id="3_m23x3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2cqfq"]
bg_color = Color(0.32915878, 0.32915822, 0.3291585, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaehf"]
bg_color = Color(0.7835238, 0.78352326, 0.7835235, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SaveConfirm" type="PanelContainer" unique_id=1313053296]
visible = false
custom_minimum_size = Vector2(560, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_2cqfq")
script = ExtResource("1_8d1wx")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=494363662]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer" unique_id=1604219178]
layout_mode = 2
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer" unique_id=533105491]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Save the current file first?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer" unique_id=1039475093]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer" unique_id=285916028]
layout_mode = 2
icon = ExtResource("2_fbx6x")
flat = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer" unique_id=902003884]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yaehf")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer" unique_id=1915029462]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer" unique_id=394124409]
layout_mode = 2

[node name="Prompt" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=913948325]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1870994527]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer" unique_id=2024689006]
layout_mode = 2
theme = ExtResource("3_m23x3")

[node name="SaveBtn" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=589116408]
layout_mode = 2
text = "Save"

[node name="SaveSpacer" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=1035076349]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveAsBtn" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=1696600390]
layout_mode = 2
text = "Save As ..."

[node name="Spacer2" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=1119122027]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelBtn" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=975890502]
layout_mode = 2
text = "Cancel"

[node name="Spacer3" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=920851313]
layout_mode = 2
size_flags_horizontal = 3

[node name="DontSaveBtn" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" unique_id=195342175]
layout_mode = 2
text = "Don't Save Changes"

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="on_cancel"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/SaveBtn" to="." method="show_save_dialog" binds= [true]]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/SaveAsBtn" to="." method="show_save_dialog" binds= [false]]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/CancelBtn" to="." method="on_cancel"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/DontSaveBtn" to="." method="on_ignore_save_chosen"]
